2005-07-23  Harald Harders  <h.harders@tu-bs.de>

	* src/term.c (write_multiline): Use estimate_strlen rather than strlen.

	* term/post.trm: Use a more foolproof method of estimating the width of
	strings containing overprint characters.

2005-07-22  Ethan Merritt  <merritt@u.washington.edu

	src/parse.c (string_or_express): Remove unused variable.

2005-07-22  Ethan Merritt  <merritt@u.washington.edu

	Introduce a new terminal API routine (term->layer)(int layer). This 
	is used by the epslatex terminal (pslatex.trm) to handle the
	"front" or "back" text attribute. In the future it might be used to
	toggle other layering effects (transparency? contour levels?).

	* src/term_api.h term/README: Define new entry point and a set of
	layer names to pass into it.

	* src/graph3d.c (do_3dplot) src/graphics.c (do_plot):
	Call t->layer(TERM_LAYER_FRONTTEXT) and t->layer(TERM_LAYER_BACKTEXT)
	at the relevant stages of plot generation.

	* src/term.c (term_start_plot term_end_plot):
	Call t->layer(TERM_LAYER_RESET) and t->layer(TERM_LAYER_END_TEXT)
	at start and end of each plot, respectively.

	* term/pslatex.trm: Implement EPSLATEX_layer() mechanism.

2005-07-20  Juergen Wieferink  <wieferink@freenet.de>

	* src/parse.c (string_or_express): Do not call int_error() for invalid
	expressions. Fixes "(s)plot 1/0".

2005-07-19  Ethan Merritt  <merritt@u.washington.edu

	* term/cgm.trm: Add a warning that Win2000 cannot handle filled
	polygons with more than 50 vertices. Not our fault! Bug #955074.

2005-07-18  Ethan Merritt  <merritt@u.washington.edu

	* src/datafile.c (df_parse_string_field): Fix tab-containing string
	constant which was broken when indent replaced tabs with spaces.

	* configure.in src/term.h term/post.h term/post.trm term/pslatex.trm:
	Repair the ordering of configuration options for building the post,
	epslatex, and pslatex terminals.  This selection is now made at the top
	of term.h, as is selection of the enhanced text stringlength estimation